# nekosu

./: .gitignore  .gitmodules  README.md  gradle.properties
.github/workflows/: Android.yml  bndk.yml  build-apk.yml  build-release.yml
app/: .gitignore  README.md  build.gradle.kts  proguard-rules.pro  settings.gradle.kts
app/app/: build.gradle.kts  proguard-rules.pro
app/app/src/androidTest/java/me/neko/nzhelper/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/app/src/main/res/values/: strings.xml
app/app/src/main/res/values-night/: themes.xml
app/gradle/: libs.versions.toml
app/release/: app-release.apk  output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/me/neko/nzhelper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeList.txt  CMakeLists.txt  native-lib.cpp
app/src/main/java/me/neko/nekosu/: MainActivity.kt  NkApplication.kt
app/src/main/java/me/neko/nksu/: MainActivity.kt  NkApplication.kt
app/src/main/res/values/: strings.xml
app/src/test/java/me/neko/nzhelper/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
patch/: 4.9openat.patch  4.9prctl.patch  5.15mkdirat.patch  5.15openat.patch
scripts/: 5.15mkdirat.py  patch.sh
src/: Kconfig  Makefile  allowlist.c  apksig.c  apksig.h  check.c  fm.c  fmac.h  get_manager.c  init.h  procfs.c  root.c
userspace/: su.c
(+54 files in other folders)
